// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`optional_string_enum_property test_optional_string_enum_property_not_templated 1`] = `
Object {
  "json": Object {
    "property": "second",
    "type": "entity_with_optional_string_enum_property",
  },
  "templateContext": Object {},
}
`;

exports[`optional_string_enum_property test_optional_string_enum_property_not_templated 2`] = `
Array [
  Array [
    [Error: No such template],
  ],
]
`;

exports[`optional_string_enum_property test_optional_string_enum_property_with_link 1`] = `
Object {
  "json": Object {
    "link": "second",
    "property": "second",
    "type": "entity_with_optional_string_enum_property",
  },
  "templateContext": Object {
    "link": "second",
  },
}
`;

exports[`optional_string_enum_property test_optional_string_enum_property_with_link_missing_data 1`] = `
Object {
  "json": Object {
    "type": "entity_with_optional_string_enum_property",
  },
  "templateContext": Object {},
}
`;

exports[`optional_string_enum_property test_optional_string_enum_property_with_link_missing_data 2`] = `
Array [
  Array [
    [Error: Missing template field],
  ],
]
`;

exports[`optional_string_enum_property test_optional_string_enum_property_with_override 1`] = `
Object {
  "json": Object {
    "property": "second",
    "type": "entity_with_optional_string_enum_property",
  },
  "templateContext": Object {
    "property": "second",
  },
}
`;

exports[`optional_string_enum_property test_optional_string_enum_property_with_override 2`] = `
Array [
  Array [
    [Error: Missing template field],
  ],
]
`;

exports[`optional_string_enum_property test_optional_string_enum_property_without_link 1`] = `
Object {
  "json": Object {
    "property": "second",
    "type": "entity_with_optional_string_enum_property",
  },
  "templateContext": Object {},
}
`;

exports[`optional_string_enum_property test_optional_string_enum_property_without_link_missing_data 1`] = `
Object {
  "json": Object {
    "type": "entity_with_optional_string_enum_property",
  },
  "templateContext": Object {},
}
`;
